# DSView

./: .gitignore  CMakeLists.txt  DSView.desktop  DSView.icns  INSTALL  NEWS  NEWS25  NEWS31  README  README.md  applogo.rc  clean  cmake_clear  dsview.desktop
DSLogic-gui/test/: CMakeLists.txt  INSTALL  config.h.in  main.cpp  stylesheet.qss
DSLogic-gui/test/data/: analogsnapshot.cpp
DSView/: CMakeLists.txt  DSLogic.qrc  DSView.desktop  DSView.qrc  DreamSourceLab.rules  INSTALL  NEWS  README  basedef.h  clean  cmake_clear  config.h  config.h.in  dsapplication.cpp  dsapplication.h  extdef.h  log.cpp  main.cpp  mystyle.h  stylesheet.qss
DSView/CMake/: FindFFTW.cmake  Findlibsigrok4DSL.cmake  Findlibsigrokdecode4DSL.cmake  Findlibusb-1.0.cmake
DSView/com/: dstimer.cpp  dstimer.h
DSView/config/: appconfig.cpp
DSView/darkstyle/: style.qrc  style.qss
DSView/decode/: annotation.cpp  annotation.h  annotationrestable.cpp  annotationrestable.h  decoderstatus.cpp  row.cpp  rowdata.cpp
DSView/demo/analog/: demo_sine_analog.dsl  sawtooth.demo
DSView/demo/logic/: demo_eeprom.dsl  demo_spi.dsl  protocol.demo
DSView/dialogs/: about.cpp  about.h  applicationpardlg.cpp  applicationpardlg.h  calibration.h  decoderoptionsdlg.cpp  deviceoptions.h  dsdialog.cpp  dsdialog.h  dsomeasure.cpp  fftoptions.cpp  fftoptions.h  lissajousoptions.h  mathoptions.h  protocolexp.h  protocollist.h  regionoptions.cpp  shadow.cpp  shadow.h  storeprogress.cpp  waitingdialog.cpp  waitingdialog.h
DSView/dock/: measuredock.h  protocolitemlayer.h  searchdock.cpp  searchdock.h  triggerdock.h
DSView/icons/: Thumbs.db
DSView/languages/: language.qrc  my_25.qm
DSView/model/: analogsnapshot.cpp  analogsnapshot.h  decodermodel.cpp  decodermodel.h  decoderstack.cpp  decoderstack.h  dsosnapshot.cpp  dsosnapshot.h  logicsnapshot.cpp  logicsnapshot.h  mathstack.cpp  mathstack.h  signaldata.cpp  signaldata.h  snapshot.cpp  snapshot.h  spectrumstack.cpp  spectrumstack.h
DSView/prop/: bool.cpp  bool.h  double.h  enum.h  int.cpp  property.cpp  string.cpp  string.h
DSView/prop/binding/: binding.h  decoderoptions.cpp  decoderoptions.h  deviceoptions.cpp  deviceoptions.h  probeoptions.cpp
DSView/pv/: ZipMaker.cpp  ZipMaker.h  appcontrol.cpp  appcontrol.h  deviceagent.cpp  deviceagent.h  devicemanager.cpp  devicemanager.h  dstimer.cpp  dstimer.h  dsvdef.cpp  dsvdef.h  eventobject.cpp  eventobject.h  extdef.h  log.cpp  log.h  mainframe.cpp  mainframe.h  mainwindow.cpp  mainwindow.h  sigsession.cpp  sigsession.h  storesession.cpp  storesession.h  winnativewidget.cpp  winnativewidget.h  winshadow.cpp  winshadow.h
DSView/pv/data/: analog.h  (+27 more)
DSView/res/: DSCope.fw  DSCope1.def.dsc  DSCope1.def25.dsc  DSCope1.def31.dsc  DSCope1.dsc  DSCope2.def.dsc  DSCope2.def25.dsc  DSCope2.def31.dsc  DSCope20.fw  DSCopeB20.fw  DSCopeC20.fw  DSCopeC20B.fw  DSCopeC20P.fw  DSCopeTest.dsc  DSCope_ini.dsc.bak  DSLogic.fw  DSLogic0.def.dsc  DSLogic0.def25.dsc  DSLogic0.def31.dsc  DSLogic0.dsc  DSLogic1.def.dsc  DSLogic1.def25.dsc  DSLogic1.def31.dsc  DSLogic1.dsc  DSLogic2.def.dsc  DSLogic2.def25.dsc  DSLogic2.def31.dsc  DSLogic2.dsc  DSLogicBasic.fw  DSLogicPlus.fw  DSLogicPro.fw  DSLogic_ini.dsc.bak  license.txt  virtual-demo1.dsc
DSView/src/: config.h  log.cpp  log.h  main.cpp  mystyle.h
DSView/test/: test.cpp
DSView/themes/: breeze.qrc  dark.qss  light.qss
DSView/toolbars/: filebar.h  logobar.cpp  logobar.h  samplingbar.cpp  samplingbar.h  titlebar.cpp  titlebar.h
DSView/ui/: string_ids.h
DSView/utility/: array.h  encoding.cpp  path.h
DSView/view/: analogsignal.cpp  decodetrace.cpp  decodetrace.h  devmode.cpp  dsldial.cpp  dsldial.h  dsosignal.h  groupsignal.cpp  groupsignal.h  header.h  lissajoustrace.cpp  logicsignal.cpp  mathtrace.cpp  mathtrace.h  signal.cpp  spectrumtrace.cpp  spectrumtrace.h  timemarker.cpp  viewport.cpp  viewstatus.h
DSView/widgets/: border.h  decodergroupbox.h  decodermenu.h  fakelineedit.cpp
DSView/zcore/: ZipMaker.h  deviceagent.h  mainframe.h  mainwindow.h  sigsession.h  storesession.h
libsigrok4DSL/: Makefile.am  README  backend.c  config.h  configure.ac  dsdevice.c  error.c  help.txt  hwdriver.c  lib_main.c  libsigrok-internal.h  libsigrok.h  libsigrok4DSL.pc.in  libsigrok4DSLogic.pc.in  log.c  log.h  proto.h  session.c  session_driver.c  session_file.c  std.c  strutil.c  trigger.c  version.c  version.h  version.h.in
libsigrok4DSL/hardware/: Makefile.am  demo.c  demo.h
libsigrok4DSL/input/: Makefile.am  in_binary.c  in_vcd.c  in_wav.c  input.c
libsigrok4DSL/output/: Makefile.am  csv.c  gnuplot.c  out_analog.c  out_binary.c  output.c  srzip.c  vcd.c
libsigrok4DSL/tests/: Makefile.am  check_core.c  check_driver_all.c  check_main.c  check_strutil.c  lib.c  lib.h  test_main.c  test_main.cpp
libsigrok4DSLogic/: ChangeLog  Makefile.in  NEWS  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.changed  device.c  filter.c  hwdriver.c  libsigrok-internal.h  libsigrok.h  libsigrok4DSLogic.pc  libsigrok4DSLogic.pc.in  libusbhp.c  log.c  proto.h  session.c  session_driver.c  session_file.c  strutil.c  version.c
libsigrok4DSLogic/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libsigrok4DSLogic/hardware/: Makefile.am  Makefile.in
libsigrok4DSLogic/input/: Makefile.in  in_binary.c  in_vcd.c  in_wav.c  input.c
libsigrok4DSLogic/output/: Makefile.in  out_analog.c  out_csv.c  out_vcd.c  output.c
libsigrok4DSLogic/tests/: Makefile.in  check_strutil.c  lib.h
libsigrokdecode4DSL/: .decoder.c.swp  .gitignore  .type_decoder.c.swp  AUTHORS  Doxyfile  HACKING  Makefile.am  NEWS  README  autogen.sh  config.h  configure.ac  decoder.c  error.c  exception.c  instance.c  libsigrokdecode-internal.h  libsigrokdecode.h  libsigrokdecode.pc.in  libsigrokdecode4DSL.pc.in  log.c  log.h  module_sigrokdecode.c  session.c  srd.c  type_decoder.c  type_logic.c  util.c  version.c  version.h  version.h.in
libsigrokdecode4DSL/m4/: sigrok.m4
libsigrokdecode4DSL/tests/: core.c  decoder.c  inst.c  lib.h  main.c  session.c
libsigrokdecode4DSL/tools/: install-decoders
(+931 files in other folders)
